This file documents the revision history for mod_gearman.

next:
          - fixed send_gearman to send duplicate result to normal server (Brian Christiansen)

1.4.10 Mon Aug  5 11:38:53 CEST 2013
          - fixed segfault on empty arguments (Michael Friedrich)
          - fixed commands containing quotes

1.4.8 Sat Jul 27 13:42:11 CEST 2013
          - ensure worker exits, even if shm blocks
          - request proper macro escaping for nagios 4

1.4.6 Tue Jun  4 17:03:57 CEST 2013
          - kill complete process group on timeout
          - close open filehandles before running check
          - added new option 'orphan_return' to set return code of orphaned checks

1.4.4 Thu May  3 15:48:34 CEST 2013
          - added 'route_eventhandler_like_checks' option
          - fixed leaking FDs on reloading neb
          - install mini-epn when epn is enabled
          - fixed executing only the first freshness check

1.4.2 Thu Jan 10 10:56:37 CET 2013
          - force check on orphaned events
          - added mini epn
          - added logrotate config (Ricardo Maraschini)
          - added new option load_limit1,5,15 to prevent new workers from spawning under heavy load. (sponsored by Ovido GmbH)

1.4.0 Thu Sep 25 22:14:31 CEST 2012
          - implemented support for nagios 4

1.3.8 Sun Aug 19 16:52:13 CEST 2012
          - fixed sending 2 results back when hit timeout

1.3.6 Mon Jul 19 17:08:19 CEST 2012
          - added 'use_uniq_jobs' option
          - allow gearman_top to display multiple servers (Thomas Dohl)
          - fixed typo in 'timeout_return' docs
          - added send_gearman.pl (Vincent Candeau)
          - Bugfixes:
            - removed newlines in perllib breaking build on opensuse

1.3.4 Tue Jun 19 14:58:14 CEST 2012
          - worker: added 'timeout_return' config option to
                    set return code for checks running into timeout
          - send_gearman: make timeout configurable