@@ -2,6 +2,7 @@ This file documents the revision history for mod_gearman.
 
 next:
           - fixed send_gearman to send duplicate result to normal server (Brian Christiansen)
+          - improved dead worker detection
 
 1.4.10 Mon Aug  5 11:38:53 CEST 2013
           - fixed segfault on empty arguments (Michael Friedrich)
